examples/neg/typevars.effekt
module typevars

def f[R]() = {
  def g[A](r: R) = ()
  g[String](4) // should not typecheck
}

def main() = ()